--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -674,7 +674,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
                     <strong>
-                      <abbr title="ven">ven</abbr>, 25 <abbr title="August">aoû</abbr>
+                      <abbr title="ven">Ven</abbr>, 25 <abbr title="August">aoû</abbr>
                     </strong>
                   </td>
                   <td>Alternance de soleil et de nuages. 40 pour cent de probabilité d'averses cet après-midi avec risque d'orages. Maximum 20.</td>
@@ -686,7 +686,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
                     <strong>
-                      <abbr title="sam">sam</abbr>, 26 <abbr title="August">aoû</abbr>
+                      <abbr title="sam">Sam</abbr>, 26 <abbr title="August">aoû</abbr>
                     </strong>
                   </td>
                   <td>Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses. Maximum 24.</td>
@@ -698,7 +698,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
                     <strong>
-                      <abbr title="dim">dim</abbr>, 27 <abbr title="August">aoû</abbr>
+                      <abbr title="dim">Dim</abbr>, 27 <abbr title="August">aoû</abbr>
                     </strong>
                   </td>
                   <td>Alternance de soleil et de nuages avec 30 pour cent de probabilité d'averses. Maximum 20.</td>
@@ -710,7 +710,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
                     <strong>
-                      <abbr title="lun">lun</abbr>, 28 <abbr title="August">aoû</abbr>
+                      <abbr title="lun">Lun</abbr>, 28 <abbr title="August">aoû</abbr>
                     </strong>
                   </td>
                   <td>Alternance de soleil et de nuages. Maximum 23.</td>
@@ -722,7 +722,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
                     <strong>
-                      <abbr title="mar">mar</abbr>, 29 <abbr title="August">aoû</abbr>
+                      <abbr title="mar">Mar</abbr>, 29 <abbr title="August">aoû</abbr>
                     </strong>
                   </td>
                   <td>Ensoleillé. Maximum 27.</td>
@@ -734,7 +734,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
                     <strong>
-                      <abbr title="mer">mer</abbr>, 30 <abbr title="August">aoû</abbr>
+                      <abbr title="mer">Mer</abbr>, 30 <abbr title="August">aoû</abbr>
                     </strong>
                   </td>
                   <td>Alternance de soleil et de nuages avec 40 pour cent de probabilité d'averses. Maximum 23.</td>
