--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -821,7 +821,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">Généralement nuageux. Neige intermittente.</div>
+            <div class="col-xs-12">Généralement nuageux. Neige intermittente. Maximum moins 2.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
