--- a/scenarioS/weather/city/pages/on-118_metric_e.html
+++ b/scenarioS/weather/city/pages/on-118_metric_e.html
@@ -669,7 +669,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <abbr title="Monday">Mon</abbr>, 2 <abbr title="January">Jan</abbr>
                     </strong>
                   </td>
-                  <td>Mainly cloudy. Periods of Snow. High minus 2</td>
+                  <td>Mainly cloudy. Periods of Snow. High minus 2.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="Monday night"> Night</td>
@@ -794,7 +794,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">	Mainly cloudy. Periods of Snow.</div>
+            <div class="col-xs-12">	Mainly cloudy. Periods of Snow. High minus 2.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
