--- a/scenarioTfr/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioTfr/weather/forecast/hourly/on-118_metric_e.html
@@ -194,11 +194,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </colgroup>
     <thead>
       <tr>
-        <th id="header1" class="wxo-tb-head">Date/Heure<br />(<abbr title="Eastern Daylight Time">HNE</abbr>)</th>
+        <th id="header1" class="wxo-tb-head">Date/Heure<br />(<abbr title="Eastern Daylight Time">HAE</abbr>)</th>
         <th id="header2" class="wxo-tb-head">
           <abbr title="Temperature">Temp</abbr>
           <br />(<abbr title="degrees Celsius">&deg;C</abbr>)</th>
-        <th id="header3" class="wxo-tb-head">Weather Conditions</th>
+        <th id="header3" class="wxo-tb-head">Condition météo</th>
         <th id="header4" class="wxo-tb-head">
           <abbr title="Likelihood of precipitation">EdP<sup id="fn1-rf">
               <a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>†</a>
