--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -669,7 +669,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                   <td>
                     <strong title="jeudi soir">Ce soir et cette nuit</strong>
                   </td>
-                  <td>Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'orages violents. Vents du sud-ouest de 20 km/h devenant légers ce soir.  Minimum 10.</td>
+                  <td>Quelques averses ou d'orages cessant cet après-midi. Nuageux par la suite. Risque d'orages violents. Vents du sud-ouest de 20 km/h.  Minimum 11.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
