--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -672,7 +672,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                   <td>
                     <strong title="Thursday night">Tonight</strong>
                   </td>
-                  <td>A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h becoming light this evening. Low 10.</td>
+                  <td>A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h. Low 11.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -792,7 +792,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h becoming light this evening. Low 10.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h. Low 11.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Chance of showers" class="pull-right" title="Chance of showers"></div>
