--- a/ut-en.html
+++ b/ut-en.html
@@ -44,10 +44,10 @@
 <section>
 
 <ul class="lst-spcd">
-<li><a href="https://www.canada.ca/en.html">Scenario F</a></li><!-- Live site, Findability -->
-<li><a href="https://gc-proto.github.io/weather/scenarioT/weather/city/pages/on-118_metric_e.html">Scenario T</a></li> <!-- Ottawa Thunderstorm -->
-<li><a href="https://gc-proto.github.io/weather/scenarioS/weather/city/pages/on-118_metric_e.html">Scenario S</a></li> <!-- Ottawa Snowfall -->
-<li><a href="https://gc-proto.github.io/weather/scenarioA/weather/city/pages/on-118_metric_e.html">Scenario A</a></li> <!-- Ottawa Air quality warning -->
+<li><a href="https://gc-proto.github.io/weather-v1/scenarioF/weather/city/pages/on-118_metric_e.html">Scenario F</a></li><!-- Findability -->
+<li><a href="https://gc-proto.github.io/weather-v1/scenarioT/weather/city/pages/on-118_metric_e.html">Scenario T</a></li> <!-- Ottawa Thunderstorm -->
+<li><a href="https://gc-proto.github.io/weather-v1/scenarioS/weather/city/pages/on-118_metric_e.html">Scenario S</a></li> <!-- Ottawa Snowfall -->
+<li><a href="https://gc-proto.github.io/weather-v1/scenarioA/weather/city/pages/on-118_metric_e.html">Scenario A</a></li> <!-- Ottawa Air quality warning -->
 </ul>
 
 
