--- a/scenarioFfr/weather/test-search.html
+++ b/scenarioFfr/weather/test-search.html
@@ -79,6 +79,9 @@ $(document).ready(function(){
 	
 </script>
 
+</body>
+</html>
+
 <script>
 
 function snoopCities(event, ui) {
@@ -119,7 +122,6 @@ $("#cityjump").on("submit", function(e) {
 
 </script>
 
-</body>
 
 
 <!-- </html>$(document).ready(function(){
