--- a/scenarioT/weather/warnings/ottawa-report_e.html
+++ b/scenarioT/weather/warnings/ottawa-report_e.html
@@ -108,7 +108,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="" property="breadcrumb">
+<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
 	<h2>You are here:</h2>
 	<div class="container">
 	<div class="row">
@@ -121,6 +121,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 </div>
 </nav>
+
+<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+	<h2>You are here:</h2>
+	<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		<li><a href="../../../weather/en.html">Home</a></li><li>...</li>
+		<li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario - south</a></li>
+		</ol>
+	</div>
+</div>
+</nav>
+
 </header>
 
 <div class="container hidden-print">
