--- a/scenarioTfr/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioTfr/weather/forecast/hourly/on-118_metric_e.html
@@ -111,7 +111,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="" property="breadcrumb">
+<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
 		<h2>Vous êtes ici :</h2>
 		<div class="container">
 	<div class="row">
@@ -126,6 +126,20 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 </div>
 	</nav>
+	
+	<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+	<h2>Vous êtes ici :</h2>
+	<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		<li><a href="../../../weather/en.html">Accueil</a></li><li>...</li>
+		<li><a href="../../../weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+		</ol>
+	</div>
+</div>
+</nav>
+
+
 </header>
     
 <div class="container hidden-print">
@@ -181,8 +195,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div id='collapsible-alerts' class='container'></div>
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 id="wb-cont">Prévisions 24 heures - Ottawa (Kanata - Orléans)</h1>
-<div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html">VEILLE D'ORAGES VIOLENTS EN VIGUEUR</a></h2></div>
+<h1 id="wb-cont">Prévisions horaires - Ottawa (Kanata - Orléans)</h1>
+<div id="watch"<div id="watch" style="border: solid 1px #CCC !important; padding: 13px; border-radius: 3px !important; font-size: 18px;"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">VEILLE D'ORAGES VIOLENTS EN VIGUEUR</a></h2></div>
 <div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
     <colgroup>
@@ -364,7 +378,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
          <td headers="header1" class="text-center">20:00</td>
         <td headers="header2" class="text-center">11</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Possibilité d'averses" /></span><div class="media-body">
-            <p>Possibilité d'averses</p>
+            <p>Possibilité d'averses. Risque d'orages violents</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Élevée</td>
@@ -376,7 +390,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
          <td headers="header1" class="text-center">21:00</td>
         <td headers="header2" class="text-center">11</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Possibilité d'averses" /></span><div class="media-body">
-            <p>Possibilité d'averses</p>
+            <p>Possibilité d'averses. Risque d'orages violents</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Élevée</td>
