--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -358,7 +358,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header1" class="text-center">19:00</td>
         <td headers="header2" class="text-center">11</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Periods of rain" /></span><div class="media-body">
-            <p>Chance of showers</p>
+            <p>Chance of showers </p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
@@ -370,7 +370,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
          <td headers="header1" class="text-center">20:00</td>
         <td headers="header2" class="text-center">11</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Periods of rain" /></span><div class="media-body">
-            <p>Chance of showers</p>
+            <p>Chance of showers. Risk of severe thunderstorms</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
@@ -382,7 +382,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
          <td headers="header1" class="text-center">21:00</td>
         <td headers="header2" class="text-center">11</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Periods of rain" /></span><div class="media-body">
-            <p>Chance of showers</p>
+            <p>Chance of showers. Risk of severe thunderstorms</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
