--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -202,7 +202,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <div id="container">
-  <div id="watch"<div id="watch" style="border: solid 1px #CCC !important; padding: 13px; border-radius: 3px !important; font-size: 18px;"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
+  <div id="watch"<div id="watch"><h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
@@ -211,17 +211,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
-            <a class="wxo-metric-hide" href="../../../weather/past_conditions/index_e.html">Past 24 hours</a>
-            <a class="wxo-imperial-hide wxo-city-hidden" href="../../../weather/past_conditions/index_e.html">Past 24 hours</a>
+            <a class="wxo-metric-hide" href="../../../weather/radar/xft-index_e.html">Radar</a>
+            <a class="wxo-imperial-hide wxo-city-hidden" href="../../../weather/radar/xft-index_e.html">Radar</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../../weather/radar/xft-index_e.html">Radar</a>
+			 <a href="../../../weather/satellite/index_e.html">Satellite</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../../weather/satellite/index_e.html">Satellite</a>
+		    <a href="../../../weather/lightning/ONT-index_e.html">Lightning</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../../weather/lightning/ONT-index_e.html">Lightning</a>
+		  <a href="../../../weather/past_conditions/index_e.html">Past 24 hours</a>
           </li>
         </ul>
         <div class="row no-gutters wb-eqht hidden-print">
