--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -183,7 +183,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 id="wb-cont">Hourly Forecast - Ottawa (Kanata - Orléans)</h1>
- <div id="watch"<div id="watch" style="border: solid 1px #CCC !important; padding: 13px; border-radius: 3px !important; font-size: 18px;"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
+ <div id="watch"<div id="watch"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
 <div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
     <colgroup>
