--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -199,7 +199,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-  <div id="watch"<div id="watch" style="border: solid 1px #CCC !important; padding: 13px; border-radius: 3px !important; font-size: 18px;"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">VEILLE D'ORAGES VIOLENTS EN VIGUEUR - DÉTAILS >> </a></h2></div>
+  <div id="watch"<div id="watch"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">VEILLE D'ORAGES VIOLENTS EN VIGUEUR - DÉTAILS >> </a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
@@ -208,17 +208,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
-            <a class="wxo-metric-hide" href="../../../weather/past_conditions/index_e.html">24 dernières heures</a>
-            <a class="wxo-imperial-hide wxo-city-hidden" href="../../../weather/past_conditions/index_e.html">24 dernières heures</a>
+            <a class="wxo-metric-hide" href="../../../weather/radar/xft-index_e.html">Radar</a>
+            <a class="wxo-imperial-hide wxo-city-hidden" href="../../../weather/radar/xft-index_e.html">Radar</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../../weather/radar/xft-index_e.html">Radar</a>
+			<a href="../../../weather/satellite/index_e.html">Satellite</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../../weather/satellite/index_e.html">Satellite</a>
+			<a href="../../../weather/lightning/ONT-index_e.html">Foudre</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../../weather/lightning/ONT-index_e.html">Foudre</a>
+            <a href="../../../weather/past_conditions/index_e.html">24 dernières heures</a>
           </li>
         </ul>
         <div class="row no-gutters wb-eqht hidden-print">
