--- a/scenarioA/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioA/weather/forecast/hourly/on-118_metric_e.html
@@ -104,7 +104,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="" property="breadcrumb">
+<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
 		<h2>You are here:</h2>
 		<div class="container">
 	<div class="row">
@@ -119,6 +119,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 </div>
 	</nav>
+	
+	<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+	<h2>You are here:</h2>
+	<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		<li><a href="../../../weather/en.html">Home</a></li><li>...</li>
+		<li><a href="../../../weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+		</ol>
+	</div>
+</div>
+</nav>
+
 </header>
     
   <div class="container hidden-print">
@@ -170,12 +183,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div id='collapsible-alerts' class='container'></div>
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 id="wb-cont">24 Hour Forecast - Ottawa (Kanata - Orléans)</h1>
-<div id="noalert" class="hidden-print">
+<h1 id="wb-cont">Hourly Forecast - Ottawa (Kanata - Orléans)</h1>
+ <!-- <div id="noalert" class="hidden-print">
   <h2>
-    <a href="../../../weather/warnings/index_e.html">No Alerts in effect</a>
+   <a href="../../../weather/warnings/index_e.html">No Alerts in effect</a> 
   </h2>
-</div>
+</div> -->
 <div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
     <colgroup>
@@ -208,7 +221,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <th class="wxo-th-bkg" colspan="6">05 September 2017</th>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">16:30</td>
+        <td headers="header1" class="text-center">16:00</td>
         <td headers="header2" class="text-center">21</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/01.png" alt="Mainly sunny" /></span><div class="media-body">
             <p>Mainly sunny</p>
@@ -223,7 +236,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">17:30</td>
+        <td headers="header1" class="text-center">17:00</td>
         <td headers="header2" class="text-center">21</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/01.png" alt="Mainly sunny" /></span><div class="media-body">
             <p>Mainly sunny</p>
@@ -238,7 +251,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">18:30</td>
+        <td headers="header1" class="text-center">18:00</td>
         <td headers="header2" class="text-center">20</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/01.png" alt="Mainly sunny" /></span><div class="media-body">
             <p>Mainly sunny</p>
@@ -253,7 +266,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">19:30</td>
+        <td headers="header1" class="text-center">19:00</td>
         <td headers="header2" class="text-center">19</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -268,7 +281,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">20:30</td>
+        <td headers="header1" class="text-center">20:00</td>
         <td headers="header2" class="text-center">17</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -283,7 +296,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">21:30</td>
+        <td headers="header1" class="text-center">21:00</td>
         <td headers="header2" class="text-center">16</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -298,7 +311,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">22:30</td>
+        <td headers="header1" class="text-center">22:00</td>
         <td headers="header2" class="text-center">16</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -313,7 +326,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">23:30</td>
+        <td headers="header1" class="text-center">23:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -331,7 +344,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <th class="wxo-th-bkg" colspan="6">06 September 2017</th>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">00:30</td>
+        <td headers="header1" class="text-center">00:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -346,7 +359,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">01:30</td>
+        <td headers="header1" class="text-center">01:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -361,7 +374,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">02:30</td>
+        <td headers="header1" class="text-center">02:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -376,7 +389,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">03:30</td>
+        <td headers="header1" class="text-center">03:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -391,7 +404,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">04:30</td>
+        <td headers="header1" class="text-center">04:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/31.png" alt="A few clouds" /></span><div class="media-body">
             <p>A few clouds</p>
@@ -406,7 +419,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">05:30</td>
+        <td headers="header1" class="text-center">05:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/32.png" alt="Partly cloudy" /></span><div class="media-body">
             <p>Partly cloudy</p>
@@ -421,7 +434,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">06:30</td>
+        <td headers="header1" class="text-center">06:00</td>
         <td headers="header2" class="text-center">15</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -436,7 +449,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">07:30</td>
+        <td headers="header1" class="text-center">07:00</td>
         <td headers="header2" class="text-center">16</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -451,7 +464,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">08:30</td>
+        <td headers="header1" class="text-center">08:00</td>
         <td headers="header2" class="text-center">17</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -466,7 +479,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">09:30</td>
+        <td headers="header1" class="text-center">09:00</td>
         <td headers="header2" class="text-center">18</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -481,7 +494,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">10:30</td>
+        <td headers="header1" class="text-center">10:00</td>
         <td headers="header2" class="text-center">19</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -496,7 +509,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">11:30</td>
+        <td headers="header1" class="text-center">11:00</td>
         <td headers="header2" class="text-center">21</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -509,7 +522,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">26</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">12:30</td>
+        <td headers="header1" class="text-center">12:00</td>
         <td headers="header2" class="text-center">22</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -522,7 +535,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">27</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">13:30</td>
+        <td headers="header1" class="text-center">13:00</td>
         <td headers="header2" class="text-center">23</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -535,7 +548,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">28</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">14:30</td>
+        <td headers="header1" class="text-center">14:00</td>
         <td headers="header2" class="text-center">23</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
@@ -548,7 +561,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header6" class="text-center">27</td>
       </tr>
       <tr>
-        <td headers="header1" class="text-center">15:30</td>
+        <td headers="header1" class="text-center">15:00</td>
         <td headers="header2" class="text-center">24</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/02.png" alt="A mix of sun and cloud" /></span><div class="media-body">
             <p>A mix of sun and cloud</p>
