--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -202,7 +202,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <div id="container">
-  <div id="watch"<div id="watch"><h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
+  <div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">SEVERE THUNDERSTORM WATCH IN EFFECT - DETAILS >></a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
