--- a/scenarioTfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioTfr/weather/city/pages/on-118_metric_e.html
@@ -199,7 +199,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-  <div id="watch"<div id="watch"> <h2 style="line-height: 25px !important;"><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">VEILLE D'ORAGES VIOLENTS EN VIGUEUR - DÉTAILS >> </a></h2></div>
+ <div id="watch"> <h2><a href="../../../weather/warnings/ottawa-report_e.html" style="text-decoration: underline !important;">VEILLE D'ORAGES VIOLENTS EN VIGUEUR - DÉTAILS >> </a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
