--- a/scenarioS/weather/city/pages/on-118_metric_e.html
+++ b/scenarioS/weather/city/pages/on-118_metric_e.html
@@ -108,7 +108,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </div>
 </nav>
 
-<nav role="navigation" id="wb-bc" class="" property="breadcrumb">
+<nav role="navigation" id="wb-bc" class="hidden-xs" property="breadcrumb">
 	<h2>You are here:</h2>
 	<div class="container">
 	<div class="row">
@@ -121,6 +121,20 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	</div>
 </div>
 </nav>
+
+<nav role="navigation" id="wb-bc" class="visible-xs" property="breadcrumb">
+	<h2>You are here:</h2>
+	<div class="container">
+	<div class="row">
+		<ol class="breadcrumb">
+		<li><a href="../../../weather/en.html">Home</a></li><li>...</li>
+		<li><a href="../../../weather/canada_e.html">Local forecasts</a></li>
+		</ol>
+	</div>
+</div>
+</nav>
+
+
 </header>
 
 <div class="container hidden-print">
@@ -175,9 +189,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-												<div id="statement">
-										 <h2>
-    <a href="../../../weather/warnings/ottawa-report_e.html">SPECIAL WEATHER STATEMENT IN EFFECT</a>
+												<div id="statement" style="background-color: pink !important; color: black !important;">
+										 <h2 style="text-decoration: underline !important;">
+    <a href="../../../weather/warnings/ottawa-report_e.html">BLOWING SNOW ADVISORY IN EFFECT - DETAILS >></a>
   </h2>
 					</div>
 				<div id="mainContent" class="mrgn-tp-lg">
