--- a/scenarioA/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioA/weather/forecast/hourly/on-118_metric_e.html
@@ -184,11 +184,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 id="wb-cont">Hourly Forecast - Ottawa (Kanata - Orléans)</h1>
- <!-- <div id="noalert" class="hidden-print">
+ <div id="noalert" class="hidden-print">
   <h2>
    <a href="../../../weather/warnings/index_e.html">No Alerts in effect</a> 
   </h2>
-</div> -->
+</div>
 <div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
     <colgroup>
