--- a/scenarioF/weather/city/pages/on-118_metric_e.html
+++ b/scenarioF/weather/city/pages/on-118_metric_e.html
@@ -205,7 +205,7 @@
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-  <!-- <div id="noalert" class="hidden-print"><h2><a href="../../../weather/warnings/index_e.html">No Alerts in effect</a></h2></div> -->
+  <div id="noalert" class="hidden-print"><h2><a href="../../../weather/warnings/index_e.html">No Alerts in effect</a></h2></div> 
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
@@ -778,15 +778,15 @@
    
     <ul class="list-unstyled visible-xs wxo-btn">
       
-      <li>
-        <a class="btn btn-default btn-sm btn-block" a href="../../../weather/forecast/hourly/on-118_metric_e.html">Hourly Forecast</a>
-      </li>
         <a class="btn btn-default btn-sm btn-block" href="../../../weather/radar/xft-index_e.html">Radar</a>
       </li>
       <li>
         <a class="btn btn-default btn-sm btn-block" href="../../../weather/lightning/ONT-index_e.html">Lightning</a>
       </li>
-     
+        <li>
+        <a class="btn btn-default btn-sm btn-block" a href="../../../weather/forecast/hourly/on-118_metric_e.html">Hourly Forecast</a>
+      </li>
+	  
     </ul>
 	
 	
